--- a/src/main/resources/templates/admin/edit-movie.html
+++ b/src/main/resources/templates/admin/edit-movie.html
@@ -52,7 +52,7 @@
       </a>
     </nav>
 
-    <a href="/api/user/profile" class="flex-shrink-0">
+    <a href="/api/admin/profile" class="flex-shrink-0">
       <div class="w-10 h-10 rounded-full flex items-center justify-center shadow-md hover:shadow-lg transition-shadow overflow-hidden">
         <img th:src="${user.profileImage?.filename != null ? '/api/image/get/' + user.profileImage.filename : 'https://via.placeholder.com/40'}"
              th:alt="${user.name + ' ' + user.surname}"
