--- a/src/main/resources/templates/to-watch.html
+++ b/src/main/resources/templates/to-watch.html
@@ -203,7 +203,7 @@
                                 th:data-movie-id="${movie.id}"
                                 onclick="removeFromWatchlist(event, this)"
                                 class="w-full px-3 py-1 bg-red-50 text-red-600 text-sm rounded hover:bg-red-100 transition-colors">
-                            Удалить из списка
+                            Удалить из "Буду смотреть"
                         </button>
                     </div>
                 </div>
