--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -35,6 +35,10 @@
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Буду смотреть
             </a>
+            <a href="/api/movie/directors"
+               class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
+                Режиссеры
+            </a>
         </nav>
 
         <a href="/api/user/profile" class="flex-shrink-0">
