--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -53,17 +53,17 @@
 </header>
 
 <main class="max-w-6xl mx-auto px-4 py-8">
-    <div class="flex flex-col md:flex-row">
-        <div class="w-full md:w-1/12 mb-4 md:mb-0 flex items-start">
-            <a href="javascript:history.back()" class="inline-flex items-center text-purple-600 hover:text-purple-800 font-medium">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
-                </svg>
-                Назад
-            </a>
-        </div>
+    <div class="mb-6">
+        <a href="javascript:history.back()"
+           class="inline-flex items-center text-gray-600 hover:text-gray-800 transition-colors">
+            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+            </svg>
+            Назад
+        </a>
+    </div>
 
-        <div class="w-full md:w-11/12 flex flex-col md:flex-row">
+    <div class="flex flex-col md:flex-row">
             <div class="w-full md:w-1/3 mb-6 md:mb-0">
                 <div th:if="${movie.poster?.filename != null}">
                     <img th:src="'/api/image/get/' + ${movie.poster.filename}"
