--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -123,25 +123,41 @@
                     </div>
 
                     <div th:if="${!inWatched}" class="relative" id="watchlistContainer">
-                        <button id="addToWatchlistBtn"
-                                onclick="addToWatchlist(this)"
-                                class="px-4 py-2 border border-purple-600 text-purple-600 rounded-md hover:bg-purple-50 transition-colors w-full sm:w-auto"
-                                th:data-movie-id="${movie.id}"
-                                th:classappend="${inToWatchList} ? 'bg-purple-100 text-purple-800 border-transparent' : ''"
-                                th:text="${inToWatchList} ? 'Добавлено в &quot;Буду смотреть&quot;' : 'Добавить в &quot;Буду смотреть&quot;'">
-                            Добавить в "Буду смотреть"
-                        </button>
+                        <div th:if="${!inToWatchList}" class="relative">
+                            <button id="addToWatchlistBtn"
+                                    onclick="addToWatchlist(this)"
+                                    class="px-4 py-2 border border-purple-600 text-purple-600 rounded-md hover:bg-purple-50 transition-colors w-full sm:w-auto"
+                                    th:data-movie-id="${movie.id}">
+                                Добавить в "Буду смотреть"
+                            </button>
+                        </div>
+                        <div th:if="${inToWatchList}" class="px-4 py-2 bg-purple-100 text-purple-800 rounded-md w-full sm:w-auto text-center">
+                            <span class="flex items-center justify-center">
+                                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                Добавлено в "Буду смотреть"
+                            </span>
+                        </div>
                     </div>
 
                     <div class="relative" id="watchedContainer">
-                        <button id="markAsWatchedBtn"
-                                onclick="markAsWatched(this)"
-                                class="px-4 py-2 border border-green-600 text-green-600 rounded-md hover:bg-green-50 transition-colors w-full sm:w-auto"
-                                th:data-movie-id="${movie.id}"
-                                th:classappend="${inWatched} ? 'bg-green-100 text-green-800 border-transparent' : ''"
-                                th:text="${inWatched} ? 'Просмотрено' : 'Отметить как просмотренное'">
-                            Отметить как просмотренное
-                        </button>
+                        <div th:if="${!inWatched}" class="relative">
+                            <button id="markAsWatchedBtn"
+                                    onclick="markAsWatched(this)"
+                                    class="px-4 py-2 border border-green-600 text-green-600 rounded-md hover:bg-green-50 transition-colors w-full sm:w-auto"
+                                    th:data-movie-id="${movie.id}">
+                                Отметить как просмотренное
+                            </button>
+                        </div>
+                        <div th:if="${inWatched}" class="px-4 py-2 bg-green-100 text-green-800 rounded-md w-full sm:w-auto text-center">
+                            <span class="flex items-center justify-center">
+                                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                Просмотрено
+                            </span>
+                        </div>
                     </div>
                 </div>
 
